add spec for overlay mounts
