# restapi/operations/mounts/get_mount_overlay_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package mounts
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/bensallen/rbd/models"
+)
+
+// GetMountOverlayOKCode is the HTTP code returned for type GetMountOverlayOK
+const GetMountOverlayOKCode int = 200
+
+/*GetMountOverlayOK Overlay mount entry
+
+swagger:response getMountOverlayOK
+*/
+type GetMountOverlayOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.MountOverlay `json:"body,omitempty"`
+}
+
+// NewGetMountOverlayOK creates GetMountOverlayOK with default headers values
+func NewGetMountOverlayOK() *GetMountOverlayOK {
+
+	return &GetMountOverlayOK{}
+}
+
+// WithPayload adds the payload to the get mount overlay o k response
+func (o *GetMountOverlayOK) WithPayload(payload *models.MountOverlay) *GetMountOverlayOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get mount overlay o k response
+func (o *GetMountOverlayOK) SetPayload(payload *models.MountOverlay) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetMountOverlayOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*GetMountOverlayDefault error
+
+swagger:response getMountOverlayDefault
+*/
+type GetMountOverlayDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetMountOverlayDefault creates GetMountOverlayDefault with default headers values
+func NewGetMountOverlayDefault(code int) *GetMountOverlayDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetMountOverlayDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get mount overlay default response
+func (o *GetMountOverlayDefault) WithStatusCode(code int) *GetMountOverlayDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get mount overlay default response
+func (o *GetMountOverlayDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get mount overlay default response
+func (o *GetMountOverlayDefault) WithPayload(payload *models.Error) *GetMountOverlayDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get mount overlay default response
+func (o *GetMountOverlayDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetMountOverlayDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
