# restapi/operations/mounts/list_mounts_overlay_responses.go
@@ -1,0 +1,119 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package mounts
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/bensallen/rbd/models"
+)
+
+// ListMountsOverlayOKCode is the HTTP code returned for type ListMountsOverlayOK
+const ListMountsOverlayOKCode int = 200
+
+/*ListMountsOverlayOK list of overlay mounts
+
+swagger:response listMountsOverlayOK
+*/
+type ListMountsOverlayOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload []*models.MountOverlay `json:"body,omitempty"`
+}
+
+// NewListMountsOverlayOK creates ListMountsOverlayOK with default headers values
+func NewListMountsOverlayOK() *ListMountsOverlayOK {
+
+	return &ListMountsOverlayOK{}
+}
+
+// WithPayload adds the payload to the list mounts overlay o k response
+func (o *ListMountsOverlayOK) WithPayload(payload []*models.MountOverlay) *ListMountsOverlayOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the list mounts overlay o k response
+func (o *ListMountsOverlayOK) SetPayload(payload []*models.MountOverlay) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ListMountsOverlayOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = make([]*models.MountOverlay, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+/*ListMountsOverlayDefault error
+
+swagger:response listMountsOverlayDefault
+*/
+type ListMountsOverlayDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewListMountsOverlayDefault creates ListMountsOverlayDefault with default headers values
+func NewListMountsOverlayDefault(code int) *ListMountsOverlayDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &ListMountsOverlayDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the list mounts overlay default response
+func (o *ListMountsOverlayDefault) WithStatusCode(code int) *ListMountsOverlayDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the list mounts overlay default response
+func (o *ListMountsOverlayDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the list mounts overlay default response
+func (o *ListMountsOverlayDefault) WithPayload(payload *models.Error) *ListMountsOverlayDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the list mounts overlay default response
+func (o *ListMountsOverlayDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ListMountsOverlayDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
