# restapi/operations/mounts/mount_overlay_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package mounts
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/bensallen/rbd/models"
+)
+
+// MountOverlayCreatedCode is the HTTP code returned for type MountOverlayCreated
+const MountOverlayCreatedCode int = 201
+
+/*MountOverlayCreated Overlay mount succeed
+
+swagger:response mountOverlayCreated
+*/
+type MountOverlayCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.MountOverlay `json:"body,omitempty"`
+}
+
+// NewMountOverlayCreated creates MountOverlayCreated with default headers values
+func NewMountOverlayCreated() *MountOverlayCreated {
+
+	return &MountOverlayCreated{}
+}
+
+// WithPayload adds the payload to the mount overlay created response
+func (o *MountOverlayCreated) WithPayload(payload *models.MountOverlay) *MountOverlayCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the mount overlay created response
+func (o *MountOverlayCreated) SetPayload(payload *models.MountOverlay) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *MountOverlayCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*MountOverlayDefault error
+
+swagger:response mountOverlayDefault
+*/
+type MountOverlayDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewMountOverlayDefault creates MountOverlayDefault with default headers values
+func NewMountOverlayDefault(code int) *MountOverlayDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &MountOverlayDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the mount overlay default response
+func (o *MountOverlayDefault) WithStatusCode(code int) *MountOverlayDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the mount overlay default response
+func (o *MountOverlayDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the mount overlay default response
+func (o *MountOverlayDefault) WithPayload(payload *models.Error) *MountOverlayDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the mount overlay default response
+func (o *MountOverlayDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *MountOverlayDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
